test/memory/bradc/allocBig.good
allocBig.chpl:3: error: Attempting to allocate > max(size_t) bytes of memory
